<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fillin_black">

        <ImageView
            android:id="@+id/img_login_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:scaleType="center"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_login_slogan"
            style="@style/EngHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login_slogan"
            android:textColor="@color/fillin_white"
            app:layout_constraintStart_toStartOf="@+id/img_login_logo"
            app:layout_constraintTop_toBottomOf="@+id/img_login_logo" />

        <TextView
            android:id="@+id/txt_login_intro"
            style="@style/Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/login_intro"
            android:textColor="@color/fillin_white"
            app:layout_constraintStart_toStartOf="@+id/txt_login_slogan"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_slogan" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_login_kakao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/shape_kakao_background"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/img_login_kakao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icn_kakao"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/txt_login_kakao_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_login_kakao_button"
                style="@style/Subhead3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="14dp"
                android:text="@string/login_kakao"
                android:textColor="@color/kakao_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_login_kakao"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_login_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:textColor="@color/fillin_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_login_kakao" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>