<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.my.MyPageActivity">

    <data>

        <variable
            name="isDebug"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fillin_black">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fillin_black"
            android:paddingVertical="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/btn_setting_debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:text="DEBUG"
                android:textAppearance="@style/EngBighead"
                android:textColor="@color/white"
                android:visibility="@{isDebug ? View.VISIBLE : View.GONE}"
                tools:visibility="gone" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_title" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:text="@string/nickname"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/iv_profile" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_nickname" />

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_camera"
            app:layout_constraintStart_toStartOf="@id/tv_nickname"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/camera_name"
            android:textColor="@color/grey_3"
            app:layout_constraintBottom_toBottomOf="@id/iv_camera"
            app:layout_constraintStart_toEndOf="@id/iv_camera"
            app:layout_constraintTop_toTopOf="@id/iv_camera" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/shape_mypage"
            android:drawableRight="@drawable/icn_arrow"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:gravity="left"
            android:lineSpacingExtra="6sp"
            android:paddingVertical="18dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/new_film_tell"
            android:textColor="@color/fillin_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_camera" />

        <View
            android:id="@+id/view_division"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/dark_grey_2"
            app:layout_constraintTop_toBottomOf="@id/btn_report" />

        <TextView
            android:id="@+id/tv_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/futura_std_book"
            android:text="@string/my_photos"
            android:textColor="@color/fillin_white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_division" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_photos"
            app:spanCount="3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>